# zbl

./: Makefile  README.md  bochsout.txt  bochsrc  libtranscribe.c
toolchains/binutils.cross/: config.sub  config.sub.orig  configure
toolchains/binutils.zblpe/: config.sub
toolchains/gcc-6.1.0.cross/: config.sub
x86/: #stage1.asm#  .io.c.swp  .linker.ld.swp  .simpfs.h.swp  Makefile  README.md  _tty.c  ata.c  blmalloc.c  bochsout.txt  bochsrc.txt  boot.S  boot.asm  boot.elf  bootloader.raw  cat.c  com.asm  com.raw  crti.S  dev.c  dev.h  dummy.3.elf  dummy.asm  dummy.c  dummy.elf  dummy.elf.asm  dummy.start.asm  elf.c  elf.h  env.c  env.h  fat.c  fat.h  fs.c  fs.h  genfs.c  genfs.h  genfsfromfile  genfsfromfile.c  genkernimg  (+96 more)
x86/exec/: ls.elf
x86/fs/: init.elf  init.tasks  isr.ko  kernel.ko  panic.ko
x86/fs/exec/: cat.elf  (+10 more)
x86/libc/: Makefile
x86/libc.dos/: Makefile
x86/libc.dos/src/: Makefile  Makefile.am  abort.c  close.c  crt0.c  crti.S  exec.c  fact.c  fsize.c  isalnum.c  isalpha.c  iscntrl.c  isdigit.c  isgraph.c  islower.c  isprint.c  ispunct.c  isspace.c  isxdigit.c  malloc.c  memset.c  open.c  panic.c  print.c  sep.c  strcat.c  strchr.c  strlen.c  strncat.c  strncmp.c  tolower.c
x86/libk/: Makefile  err.c  fs.c  fs.h  io.c  str.c  str.h
x86/win-support/: pe.c  pe.h
zc/: Makefile  bindump  bindump.c  dl  dl.c  libasm.c  libasm.h  libasm.old  libdynm.h  libzexec.c  putc.zasm  putc.zexec  readz  readzexec.c  test.2.asm  test.2.elf  test.2.zasm  test.2.zexec  test.asm  test.c  test.elf  test.zasm  test.zexec  zasm  zasm.c  zdump  zdump.c  zexec.h
(+650 files in other folders)
